# TRIAD-Blockchain

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark_results.json  build.rs  consensus_comparison.json  entanglement_output.txt  quest_output.txt  run-docker.sh  shell-docker.sh
 TRIADBlockchain/my_blockchain/: README.md
dashboard/: index.html
docs/: TRIAD_Improvement_Plan.md  hybrid_triad_mathematical_model.md  quantum_blockchain_performance.md  quantum_implementation_plan.md  quantum_interference_calculations.md  triad_mathematical_calculations.md  whitepaper.md
examples/: deutsch_algorithm.rs  superposition_and_entanglement.rs
src/: api.rs  api_fixed.rs  lib.rs  main.rs  utils.c
src/consensus/: comparisons.rs  mod.rs  quantum_interference.rs
src/core/: gates.rs  mod.rs  quantum_simulator.rs  quantum_state.rs  qubit.rs
src/distributed/: metrics.rs  mod.rs  quantum_peer.rs  quantum_protocol.rs
src/examples/: advanced_algorithms.rs  deutsch_algorithm.rs  mod.rs  random_number.rs
src/network/: mod.rs  node.rs  virtual_network.rs
src/quantum/: coherent_field.rs  mod.rs  quantum_field.rs  quantum_integration.rs  qubit.rs  register.rs  triadvantum_adapter.rs
src/quantum/triadvantum/: circuit.rs  delta.rs  gates.rs  interference.rs  mod.rs  operators.rs  qrng.rs  recovery.rs  simulator.rs  state.rs  triadvantum_adapter.rs  virtual_network.rs
src/quest/: ffi.rs  mod.rs
src/storage/: mod.rs
src/visualization/: charts.rs  dashboard.rs  mod.rs
