[package]
name = "triad"
version = "0.1.0"
edition = "2021"
authors = ["Михаил"]
description = "TRIAD - Квантово-вдохновленная распределенная сеть следующего поколения"
license = "MIT"
readme = "README.md"
build = "build.rs"  # Скрипт сборки для компиляции QuEST

[dependencies]
# Математические библиотеки
num-complex = "0.4.3"  # Для работы с комплексными числами (квантовые амплитуды)
nalgebra = "0.32.3"    # Для матричных операций
rand = "0.8.5"         # Для генерации случайных чисел (измерения)

# Сериализация/десериализация
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Сетевые библиотеки
tokio = { version = "1.28.0", features = ["full"] }  # Асинхронный runtime
libp2p = { version = "0.51.0", features = ["tcp", "noise"] }  # P2P коммуникации

# Утилиты
log = "0.4.17"         # Логирование
env_logger = "0.10.0"  # Конфигурация логирования
thiserror = "1.0.40"   # Обработка ошибок

# FFI-интеграция для работы с C-библиотекой QuEST
libc = "0.2.151"       # Для работы с C-типами
once_cell = "1.17.1"   # Для безопасной ленивой инициализации

# Дополнительные зависимости
clap = { version = "4.4.10", features = ["derive"] }
plotters = "0.3.5"

[build-dependencies]
cc = "1.0.83"          # Для компиляции C-кода QuEST

[dev-dependencies]
criterion = "0.5.1"    # Для бенчмарков

[lib]
name = "triad"
path = "src/lib.rs"

[[bin]]
name = "triad"
path = "src/main.rs"

[[example]]
name = "random_number"
path = "src/examples/random_number.rs"

[[example]]
name = "deutsch_algorithm"
path = "src/examples/deutsch_algorithm.rs"

[profile.release]
opt-level = 3
lto = true 